--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
 
 [tool.setuptools_scm]
-write_to = "fibsemtools/version.py"
+write_to = "jfibsem_dat/version.py"
 
 [tool.isort]
 profile = "black"
