--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,12 @@ repos:
   - id: isort
 
 - repo: https://github.com/psf/black
-  rev: 21.12b0
+  rev: "22.1.0"
   hooks:
   - id: black
     # language_version: python3.8
 
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 4.0.1
+  rev: "4.0.1"
   hooks:
   - id: flake8
