--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy>=1.22
 scipy
 scikit-image
 matplotlib
@@ -6,7 +6,7 @@ matplotlib_scalebar
 
 # dev
 
-black
+black>=22.1
 flake8
 isort
 mypy
