use pre-commit on CI, document extras

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - run: pip install $(grep -E '^(black|flake8|isort|mypy)' requirements.txt)
+      - run: |
+          pip install pre-commit
+          pre-commit install
       - run: make lint
 
   test:
@@ -31,8 +33,7 @@ jobs:
           pip install -U pip wheel setuptools
           pip install -r requirements.txt
         name: Install dependencies
-      - run: |
-          pip install .
+      - run: pip install '.[all]'
         name: Install package
       - run: pytest --verbose
 
